@@ -42,6 +42,7 @@
   db._drop("UnitTestsImportCsv3");
   db._drop("UnitTestsImportCsv4");
   db._drop("UnitTestsImportCsv5");
+  db._drop("UnitTestsImportCsv6");
   db._drop("UnitTestsImportCsvNoConvert");
   db._drop("UnitTestsImportCsvNoEol");
   db._drop("UnitTestsImportTsv1");
